Fixes z-index bug in option grid
The collapsible form was covered by subsequent (invisible) option
cells and therefor the input elements in the form could not gain
focus. I incremented the z-index (and gave the form container a
relative position!) to fix this.

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -351,6 +351,8 @@ ul.check {
         // ... define form width depending on cell count ...
         .opt-form-cont {
           width: $cnt * 100%;
+          position: relative;
+          z-index: 1;
         }
 
         // ... define form offset depending on cell count and
